# Assign1

./: CMakeLists.txt  Doxyfile  MyDLL.c  MyDLL.h  MyDLLFind.c  SETR_Assign1 .docx
LibFolder/: CMakeLists.txt  MyDLL.c  MyDLL.h
doc/html/: MyDLL_8h.html  MyDLL_8h__dep__incl.dot  MyDLL_8h__incl.dot  MyDLL_8h_source.html  annotated.html  bug.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.dot  pages.html  structDoublyLinkedList.html  structDoublyLinkedList__coll__graph.dot  structNode.html  structNode__coll__graph.dot
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
doc/latex/: MyDLL_8h.tex  MyDLL_8h.tex.tmp  MyDLL_8h__dep__incl.dot  MyDLL_8h__incl.dot  annotated.tex  bug.tex  files.tex  main_8c.tex  main_8c__incl.dot  refman.tex  structDoublyLinkedList.tex  structDoublyLinkedList__coll__graph.dot  structNode.tex  structNode__coll__graph.dot
src/: main.c
